# 586-mvc

./: .env  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/migrations/2019-09-30-231238_create_workers/: down.sql  up.sql
backend/migrations/2019-09-30-231240_create_tasks/: up.sql
backend/migrations/2019-09-30-231243_create_projects/: up.sql
backend/migrations/2019-10-01-025809_create_worker-tasks/: down.sql  up.sql
backend/src/: data.rs  db.rs  lib.rs  macros.rs  perms.rs  schema.rs  server.rs
backend/src/actions/: add_project.rs  add_task.rs  add_worker.rs  delete_project.rs  delete_worker.rs  get_projects.rs  get_tasks.rs  get_workers.rs  macros.rs  mod.rs
backend/src/my/: env.rs  model.rs
backend/src/prod/: env.rs  mod.rs  model.rs
backend/src/test/: env.rs  logger.rs  mod.rs  model.rs
backend/src/traits/: action.rs  actor.rs  logger.rs  mod.rs  model.rs
backend/tools/: add_project  get_projects  get_projects.json
common/: .env  Cargo.toml
common/migrations/2019-11-05-020630_all/: down.sql  up.sql
common/src/: data.rs  lib.rs  macros.rs  schema.rs
frontend/: .gitignore  Cargo.toml  Web.toml
frontend/src/: component.rs  lib.rs  main.rs  model.rs  msg.rs  render.rs
procs/: Cargo.toml
procs/src/: lib.rs  main.rs
