[package]
name = "backend"
version = "0.1.0"
authors = ["Brian McClelland"]
edition = "2018"

[dependencies]
common = { path = "../common" }
procs  = { path = "../procs" }
rouille = "3.0.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
erased-serde = { version = "0.3.9" }
diesel = { version = "1.4.6", features = ["sqlite"]}
diesel-derive-newtype = "0.1.2"
dotenv = "0.14.1"
failure = "0.1.6"
